The program now displays the current weather data by fetching the users geolocation

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
     <title>Weather App</title>
   </head>
   <body>
     <div id="weather-container">
       <div id="location">City, Country</div>
-      <div id="temperature">25°C</div>
-      <div id="conditions">Partly Cloudy</div>
-      <div id="visibility">Visibility: 10 km</div>
+      <div id="temperature">Temperature</div>
+      <div id="conditions">Conditions</div>
+      <div id="visibility">Visibility</div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
