Added markup for readmore section and selected elements to work with from the read more section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
       <div id="temperature">Temperature</div>
       <div id="conditions">Conditions</div>
       <div id="visibility">Visibility</div>
+      <button id="read-more-btn">Read More</button>
+      <div id="read-more-container">
+        <div id="highest-temp" class="more-info">Highest temp:</div>
+        <div id="lowest-temp" class="more-info">Lowest temp:</div>
+        <!-- Format should be wind speed then direction (eg: 2km south) -->
+        <div id="wind-speed-direction" class="more-info">
+          Wind speed: , Direction:
+        </div>
+        <div id="precipitation" class="more-info">Precipitation: 10</div>
+      </div>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
