Implemented read more functionality that displays additional information when the user clicks the read-more button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div id="visibility">Visibility</div>
       <button id="read-more-btn">Read More</button>
       <div id="read-more-container">
-        <div id="highest-temp" class="more-info">Highest temp:</div>
-        <div id="lowest-temp" class="more-info">Lowest temp:</div>
+        <!-- <div id="highest-temp" class="more-info">Highest temp:</div>
+        <div id="lowest-temp" class="more-info">Lowest temp:</div> -->
         <!-- Format should be wind speed then direction (eg: 2km south) -->
         <div id="wind-speed-direction" class="more-info">
           Wind speed: , Direction:
