Added markup for searching weather by specific city functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="weather-container">
+      <div id="search-container">
+        <input
+          type="text"
+          id="city-search"
+          placeholder="Search weather for a specific city"
+        />
+        <button id="search-btn">Search</button>
+      </div>
+
       <div id="location">City, Country</div>
       <div id="temperature">Temperature</div>
       <div id="conditions">Conditions</div>
