Added markup for weather icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       </div>
 
       <div id="location">City, Country</div>
-      <div id="temperature">Temperature</div>
+      <div id="weather">
+        <div id="weather-icon" style="display: inline">&#9728;</div>
+        <div id="temperature">Temperature</div>
+      </div>
       <div id="conditions">Conditions</div>
       <div id="visibility">Visibility</div>
       <button id="read-more-btn">Read More</button>
